<resources>
    <string name="app_name">EcoLab</string>
    <string name="txt_objetivo">O projeto Ecolab tem como objetivo promover a conscientização sobre o consumo energético, incentivando práticas mais sustentáveis. Com o aumento da demanda por energia e os impactos ambientais associados, nosso foco é ajudar as pessoas a entender a importância da redução do consumo de energia no cotidiano, contribuindo para a preservação do meio ambiente e a mitigação dos efeitos das mudanças climáticas.</string>
    <string name="ecolab">EcoLab</string>
    <string name="txt_solucao">A solução desenvolvida pela equipe Ecolab é um aplicativo que auxilia os usuários a monitorar e controlar seu consumo energético de maneira prática e intuitiva. Com recursos de monitoramento em tempo real, dicas personalizadas e sugestões de ajustes em aparelhos e hábitos, o aplicativo ajuda os usuários a identificar áreas de desperdício e adotar práticas mais eficientes, incentivando uma rotina de consumo consciente e sustentável.</string>
    <string name="txt_button_inicio">Início</string>
    <string name="txt_button_home">Home</string>
    <string name="txt_titulo_solucao">Voce esta na tela do nosso Solucao</string>
    <string name="txt_titulo_cadastro">Voce esta pronto para mudar o futuro?</string>
    <string name="txt_hint_e_mail">Digite seu e-mail</string>
    <string name="txt_hint_senha">Digite Sua Senha</string>
    <string name="txt_hint_confirm_senha">Confirme Sua Senha</string>
    <string name="txt_button_criar_conta">Criar Conta</string>
    <string name="txt_button_voltar">Voltar</string>
    <string name="txt_titulo_redefinir_senha">Esqueceu sua senha? Nao tem problema vamos redefinir agora!</string>
    <string name="txt_button_enviar">Enviar</string>
    <string name="txt_ic_menu">Menu</string>
    <string name="txt_button_solucao">Solucao</string>
    <string name="txt_button_objetivo">Objetivo</string>
    <string name="txt_button_sobre">Sobre</string>
    <string name="txt_button_sair">Sair</string>
    <string name="txt_titulo_informacao_pessoal">Precisamos de mais uns detalhes</string>
    <string name="txt_hint_nome">Digite seu Nome</string>
    <string name="txt_hint_telefone">Digite seu Telefone</string>
    <string name="txt_login">Login</string>
    <string name="txt_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="txt_button_entrar">Entrar</string>
    <string name="txt_titulo_main">O futuro esta nas suas mãos!</string>
    <string name="txt_titulo_objetivo">Você está na tela do nosso Objetivo</string>
    <string name="txt_titulo_sobre">INTEGRANTES DESTE PROJETO</string>
    <string name="txt_integrantes">Victor Fanfoni RM-99173\nGustavo Costa RM-99102\nHelena Paixão RM-550929\nGiulia Pina RM-97694\nJulia Nery RM-552292</string>
    <string name="txt_titulo_configuracao">Voce esta na tela Configuracoes</string>
    <string name="txt_exemplo_usuario">Usuario</string>
    <string name="txt_button_atuli_email_senha">Atualizar Email e Senha</string>
    <string name="txt_button_atuli_nome_telefone">Atulizar Nome e Telefone</string>
    <string name="txt_button_deletar_conta">Deletar Conta</string>
    <string name="txt_titulo_email_password">Voce esta na tela de atulizar Email e Senha</string>
    <string name="txt_hint_novo_e_mail">Digite seu Novo e-mail</string>
    <string name="txt_nova_senha">Digite Sua Nova Senha</string>
    <string name="txt_hint_confirme_sua_nova_senha">Confirme Sua Nova Senha</string>
    <string name="txt_digite_sua_senha_atual">Digite Sua Senha Atual</string>
    <string name="txt_titulo_name_phone">Voce esta na tela de atulizar Nome e telefone</string>
    <string name="txt_digite_seu_novo_nome">Digite seu novo nome</string>
    <string name="txt_digite_seu_novo_telefone">Digite seu novo telefone</string>
    <string name="txt_exemplo_nome">Nome do usuario</string>
    <string name="txt_descricao_img_home">Botao home</string>
    <string name="txt_descricao_button_sair">Button Sair</string>
    <string name="txt_decricao_button_sobre">Button Sobre</string>
    <string name="txt_descricao_button_objetivo">Button Objetivo</string>
    <string name="txt_descricao_button_solucao">Button Solucao</string>
    <string name="img_energia_sustentavel">imagem energia sustentavel</string>
    <string name="telefone">Telefone</string>
</resources>