<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDCDCD">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@drawable/bg_color_toolbar"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_goback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ecolab"
            android:textSize="20sp"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/txt_titulo_email_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/txt_hint_e_mail"
        android:layout_marginTop="70dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edit_new_email"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/ic_email"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_hint_novo_e_mail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/lock"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_nova_senha"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edit_new_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/edit_confirmarSenha"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/lock"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_hint_confirme_sua_nova_senha"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/edit_senha_atual"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/lock"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_digite_sua_senha_atual"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edit_confirmarSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha_atual"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/txt_button_enviar"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/edit_senha_atual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#0469A2"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/Home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/txt_descricao_img_home"
                android:src="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_button_home"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
